[package]
name = "actix-proxy"
version = "0.1.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2021"
license = "MIT"
readme = "README.rst"
description = "Trait for converting actix_web::client::ClientResponse to actix_web::HttpResponse"
homepage = "https://github.com/jofas/actix_proxy"
repository = "https://github.com/jofas/actix_proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-rt = "*"
openssl = { version = "*", features = ["v110"] }
futures = "*"
awc = { version = "3", features = ["openssl"] }
